--- a/store.html
+++ b/store.html
@@ -1531,18 +1531,62 @@ html, body {
 </div>
 
 <script>
-/* ================= STORE TAB SCROLL ================= */
-document.querySelectorAll('.store-tab').forEach(tab => {
-  tab.addEventListener('click', e => {
-    e.preventDefault();
-    const target = document.querySelector(tab.getAttribute('href'));
-    if (target) {
-      target.scrollIntoView({ behavior: 'smooth', block: 'start' });
-    }
-  });
-});
+/* ================= EPÒK HEADLESS SHOPIFY CART ================= */
 
-/* ================= GLOBAL CLICK HANDLER ================= */
+const SHOPIFY_DOMAIN = "epok-8204.myshopify.com";
+const STOREFRONT_TOKEN = "5b037f774a48b173f8f976ee95cea12b";
+const API_URL = `https://${SHOPIFY_DOMAIN}/api/2024-01/graphql.json`;
+
+/* ---------------- CART STATE ---------------- */
+let cartItems = [];
+
+/* ---------------- ADD TO CART ---------------- */
+function addToCart(variantId, quantity = 1) {
+  const existing = cartItems.find(i => i.variantId === variantId);
+  if (existing) {
+    existing.quantity += quantity;
+  } else {
+    cartItems.push({ variantId, quantity });
+  }
+  console.log("Cart:", cartItems);
+}
+
+/* ---------------- CHECKOUT ---------------- */
+async function goToCheckout() {
+  if (!cartItems.length) return alert("Cart is empty");
+
+  const lineItems = cartItems.map(item => ({
+    variantId: `gid://shopify/ProductVariant/${item.variantId}`,
+    quantity: item.quantity
+  }));
+
+  const query = `
+    mutation checkoutCreate($lineItems: [CheckoutLineItemInput!]!) {
+      checkoutCreate(input: { lineItems: $lineItems }) {
+        checkout {
+          webUrl
+        }
+      }
+    }
+  `;
+
+  const res = await fetch(API_URL, {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+      "X-Shopify-Storefront-Access-Token": STOREFRONT_TOKEN
+    },
+    body: JSON.stringify({
+      query,
+      variables: { lineItems }
+    })
+  });
+
+  const data = await res.json();
+  window.location.href = data.data.checkoutCreate.checkout.webUrl;
+}
+
+/* ---------------- GLOBAL CLICK HANDLER ---------------- */
 document.addEventListener("click", function (e) {
 
   /* ===== SELECT BUTTON ===== */
@@ -1551,41 +1595,45 @@ document.addEventListener("click", function (e) {
     if (!actions) return;
 
     const sizeBox = actions.querySelector(".size-popup");
-    const cartLink = actions.querySelector(".add-to-cart");
+    const singleVariant = actions.getAttribute("data-variant");
 
-    /* PRODUCT WITH SIZES */
+    // PRODUCT WITH SIZES
     if (sizeBox) {
       sizeBox.style.display = "flex";
       return;
     }
 
-    /* PRODUCT WITHOUT SIZES (BEANIES, HATS) */
-    if (cartLink && cartLink.href) {
-      window.open(cartLink.href, "_blank");
+    // PRODUCT WITHOUT SIZES
+    if (singleVariant) {
+      addToCart(singleVariant);
       return;
     }
   }
 
   /* ===== SIZE BUTTON ===== */
   if (e.target.closest(".size-popup button")) {
-    const sizeBtn = e.target;
-    const variantId = sizeBtn.getAttribute("data-variant");
+    const btn = e.target;
+    const variantId = btn.getAttribute("data-variant");
     if (!variantId) return;
 
-    const cartUrl = `https://epok-8204.myshopify.com/cart/${variantId}:1`;
-    window.open(cartUrl, "_blank");
+    addToCart(variantId);
 
-    const popup = sizeBtn.closest(".size-popup");
+    const popup = btn.closest(".size-popup");
     if (popup) popup.style.display = "none";
+    return;
+  }
+
+  /* ===== CHECKOUT BUTTON ===== */
+  if (e.target.classList.contains("btn-checkout")) {
+    e.preventDefault();
+    goToCheckout();
     return;
   }
 
 });
 
-/* ================= DOM READY ================= */
+/* ================= SAVE SYSTEM (UNCHANGED) ================= */
 document.addEventListener("DOMContentLoaded", () => {
-
-  /* ===== SAVE (LOCKED — DO NOT TOUCH) ===== */
   document.querySelectorAll(".btn-save").forEach(btn => {
     btn.addEventListener("click", () => {
       const wrap = btn.closest(".product-wrap");
@@ -1599,12 +1647,8 @@ document.addEventListener("DOMContentLoaded", () => {
       savedGrid.appendChild(clone);
     });
   });
-
 });
 </script>
-
-
-
 
 </body>
 </html>
