--- a/store.html
+++ b/store.html
@@ -1,1 +1,175 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>EPÒK | Store</title>
 
+<style>
+* { margin:0; padding:0; box-sizing:border-box; }
+
+html, body {
+  background:#000;
+  color:#f2f2f2;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+}
+
+/* ================= LAYOUT ================= */
+.product-grid,
+.horizontal-scroll {
+  display:flex;
+  gap:22px;
+  overflow-x:auto;
+  padding-bottom:14px;
+}
+
+.product-card {
+  width:240px;
+  height:260px;
+  border:1px solid rgba(212,175,55,.25);
+}
+
+.placeholder-img img {
+  width:100%;
+  height:100%;
+  object-fit:contain;
+}
+
+.product-actions {
+  padding:12px;
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+}
+
+.product-actions button {
+  border:1px solid rgba(212,175,55,.7);
+  background:#000;
+  color:#f3d688;
+  padding:10px;
+  font-size:.65rem;
+  letter-spacing:.28em;
+  cursor:pointer;
+}
+
+.product-actions button:hover {
+  background:rgba(212,175,55,.15);
+}
+
+.size-popup {
+  display:none;
+  gap:6px;
+}
+
+.size-popup button {
+  padding:6px;
+}
+
+/* ================= CHECKOUT BUTTON ================= */
+.checkout-float {
+  position:fixed;
+  bottom:22px;
+  right:22px;
+  border:1px solid rgba(212,175,55,.7);
+  padding:14px 22px;
+  font-size:.7rem;
+  letter-spacing:.28em;
+  text-transform:uppercase;
+  color:#f3d688;
+  text-decoration:none;
+  background:#000;
+  z-index:9999;
+}
+</style>
+</head>
+
+<body>
+
+<!-- ================= PRODUCTS ================= -->
+
+<div class="horizontal-scroll">
+
+  <!-- BEANIE -->
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="ModelPictures/patchbabysjogger/pompombeanie.png">
+      </div>
+    </div>
+
+    <div class="product-actions">
+      <button class="btn-select" data-variant="52764320760126">
+        SELECT
+      </button>
+    </div>
+  </div>
+
+  <!-- SWEATSHIRT -->
+  <div class="product-wrap">
+    <div class="product-card">
+      <div class="placeholder-img">
+        <img src="ModelPictures/patchbabysjogger/sweatshirtfront.png">
+      </div>
+    </div>
+
+    <div class="product-actions">
+
+      <div class="size-popup">
+        <button data-variant="52764324561214">S</button>
+        <button data-variant="52764324593982">M</button>
+        <button data-variant="52764324626750">L</button>
+        <button data-variant="52764324659518">XL</button>
+        <button data-variant="52764431810878">XXL</button>
+      </div>
+
+      <button class="btn-select">
+        SELECT
+      </button>
+
+    </div>
+  </div>
+
+</div>
+
+<!-- ================= CHECKOUT ================= -->
+<a href="https://epok-8204.myshopify.com/cart" class="checkout-float">
+  CHECKOUT
+</a>
+
+<!-- ================= SHOPIFY CART LOGIC ================= -->
+<script>
+document.addEventListener("click", e => {
+
+  /* SELECT */
+  if (e.target.classList.contains("btn-select")) {
+    const actions = e.target.closest(".product-actions");
+    const sizeBox = actions.querySelector(".size-popup");
+    const variant = e.target.dataset.variant;
+
+    if (sizeBox) {
+      sizeBox.style.display = "flex";
+      return;
+    }
+
+    if (variant) addToCart(variant);
+  }
+
+  /* SIZE */
+  if (e.target.closest(".size-popup button")) {
+    const variant = e.target.dataset.variant;
+    if (!variant) return;
+
+    addToCart(variant);
+    e.target.closest(".size-popup").style.display = "none";
+  }
+
+});
+
+function addToCart(variantId) {
+  const img = new Image();
+  img.src = `https://epok-8204.myshopify.com/cart/add?id=${variantId}&quantity=1`;
+}
+</script>
+
+</body>
+</html>
